fix padding on mobile weather details

--- a/src/components/mobileWeatherDetails/MobileWeatherDetails.module.css
+++ b/src/components/mobileWeatherDetails/MobileWeatherDetails.module.css
@@ -1,6 +1,6 @@
 .mobile-weather-details {
   background-color: rgba(13, 17, 26, 0.631);
-  padding: 2rem 2rem;
+  padding: 5rem 2rem;
   border-radius: 2rem;
   max-width: 100%;
   /* min-width: 100%; */
